fix: shirt text not positioned properly when  viewed on small devices

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,6 +46,10 @@ section.options-view {
     margin-top: 10px;
 }
 
+.product-view {
+    overflow-x:auto;
+}
+
 
 #prod_color::after,
 #font-color-picker::after {
@@ -60,8 +64,8 @@ section.options-view {
     position: absolute;
     left: 0;
     top: -30;
-    width: 100%;
-    height: 100%;
+    width: 520px;
+    height: 524px;
 }
 
 .blend-stencil {
@@ -146,6 +150,12 @@ section.options-view label {
 
 #stencilDrop, #MonoText, #fontFamilyDrop {
     font-size: 1.7em;
+}
+
+.badge-text2 {
+    position: relative;
+    top: -237px;
+    left: 36.6px;
 }
 
 
